--- a/index.html
+++ b/index.html
@@ -50,64 +50,64 @@
                 <div class="contenedor-carousel">
                     <div class="carousel">
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/01.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/01.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/02.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/02.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/03.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/03.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/04.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/04.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/05.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/05.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/06.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/06.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/07.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/07.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/08.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/08.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/09.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/09.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/10.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/10.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/11.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/11.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/12.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/12.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/13.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/13.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/14.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/14.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/15.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/15.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/16.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/16.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/17.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/17.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/18.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/18.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/19.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/19.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                         <div class="pelicula">
-                            <a href="#"><img src="/assets/img/20.jpg" alt="pelicula vengadores fin del juego"></a>
+                            <a href="#"><img src="assets/img/20.jpg" alt="pelicula vengadores fin del juego"></a>
                         </div>
                     </div>
                 </div>
